# BGSTDQml

./: CMakeLists.txt
BGControls/: BGApplicationWindow.qml  BGButton.qml  BGCheckBox.qml  BGComboBox.qml  BGDialog.qml  BGDialogButtonBox.qml  BGDrawer.qml  BGFieldsGroupBox.qml  BGFieldsLayout.qml  BGFieldsPane.qml  BGFrame.qml  BGGroupBox.qml  BGItemDelegate.qml  BGMenu.qml  BGMenuBar.qml  BGMenuBarItem.qml  BGMenuItem.qml  BGMenuSeparator.qml  BGOptionField.qml  BGPage.qml  BGPane.qml  BGPopup.qml  BGRadioButton.qml  BGRangeSlider.qml  BGRoundButton.qml  BGScrollBar.qml  BGScrollIndicator.qml  BGScrollView.qml  BGSlider.qml  BGSpinBox.qml  BGSwitch.qml  BGTabBar.qml  BGTabButton.qml  BGText.qml  BGTextArea.qml  BGTextField.qml  BGToolBar.qml  BGToolButton.qml  BGToolSeparator.qml  CMakeLists.txt  (+35 more)
BGControls/Private/: BGSliderHandle.qml  BGSliderTick.qml
Handwriter/: CMakeLists.txt  HWNavigatorPreview.qml  HWViewportPreview.qml  HWWriteNavigator.qml  PaperPanBehavior.qml  QuickToolKit.qml  StrokeAdjustment.qml  StrokeColorButton.qml  StrokeColorSelector.qml  StrokeColorSelectorComboBox.qml  StrokeKit.qml  StrokePresets.qml  StrokePreview.qml  StrokeSampleButton.qml  StrokeSettings.qml  UserSavedStrokes.qml  androidinterface.cpp  androidinterface.h  global_variable.cpp  handwriter.db  hwcanvas.h  hwcanvasbase.cpp  hwcanvasbase.h  hwdatastorage.cpp  hwdatastorage.h  hwgesturearea.cpp  hwgesturearea.h  hwgrabpreview.cpp  hwgrabpreview.h  hwguideline.h  hwguidelinebase.cpp  hwguidelinebase.h  hwlsdpapermodel.cpp  hwlsdpapermodel.h  hwoutput.cpp  hwoutput.h  hwpaper.cpp  hwpaper.h  hwpaperpreview.cpp  hwpaperpreview.h  (+16 more)
Handwriter/Private/: GestureArea.qml  StrokeCollection.qml
Handwriter/common/: CMakeLists.txt  dataconversion.cpp  dataconversion.h  stroke.cpp  stroke.h  strokerenderbase.cpp  strokerenderbase.h
Handwriter/render/QSG/: contentnode.cpp  contentnode.h  hwsgcanvas.cpp  hwsgcanvas.h  hwsgguideline.cpp  hwsgguideline.cpp.nBXGVE  hwsgguideline.h  strokegeometrynode.cpp  strokegeometrynode.h
Handwriter/render/software/: hwsftcanvas.cpp  hwsftcanvas.h
LooseLeafNoteBook/: ActivePaperList.qml  ActivePaperTabBar.qml  CMakeLists.txt  LooseLeafPaper.qml  LooseLeafPaperList.qml  LooseLeafViewport.qml  Main.qml  MainForm.ui.qml  main.cpp
LooseLeafNoteBook/android/: AndroidManifest.xml
demo/BGControls/: ButtonsDemo.qml  CMakeLists.txt  ColorMixer.qml  ColorSelectorButton.qml  Customization.qml  DemoCtrlGroup.qml  DialogDemo.qml  FramesDemo.qml  GroupBoxsDemo.qml  InputsDemo.qml  Main.qml  MenuDemo.qml  PaletteDemo.qml  PanesDemo.qml  SlidersDemo.qml  SwitchsDemo.qml  main.cpp
demo/Handwriter/: CMakeLists.txt  HWViewport.qml  Main.qml  NavigatorToolbars.qml  StrokeDrawer.qml  StrokeSelectorComboBox.qml  hwviewportattach.cpp  hwviewportattach.h  main.cpp
demo/Handwriter/Private/: GestureArea.qml
demo/Handwriter/android/: AndroidManifest.xml
